eureka-naming-server is created.

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #enabling hibernate to create ttable
 spring.jpa.hibernate.ddl-auto=update
 
+#Connecting to eureka naming server client
+eureka.client.service-url.default-zone=	http://localhost:8761/eureka
+
 
