git remote repository.
git remote repository  configure is added for spring cloud config server.

--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.application.name = spring-cloud-config-server
 server.port = 8888
 
 spring.cloud.config.server.git.uri =file://G://SpringToolSuitWorkSpace//microservice//git-localconfig-repo 
+
+
+# if you want to use remote git reposiory, then use belows configuretion
+# spring.cloud.config.server.git.uri =https://github.com/shaikh-imran1/configure-properties.git
+# spring.cloud.config.server.git.clone-on-start=true
+# spring.cloud.config.server.git.username=username
+# spring.cloud.config.server.git.password=password
